--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.brainuptech.amharicdictionary">
 
     <application
+        android:name=".Dictionary"
         android:allowBackup="true"
         android:icon="@drawable/icon_dic"
         android:label="@string/app_name"
@@ -35,7 +36,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ViewMore"
+            android:name=".ViewMoreAmharic"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -46,6 +47,17 @@
                 android:value=".MainActivity" />
         </activity>
 
+        <activity
+            android:name=".ViewMoreEnglish"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
 
 </manifest>
