--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,13 +20,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:cardview-v7:23.2.1'
-
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
-    compile 'com.google.android.gms:play-services-ads:8.4.0'
 
+    compile 'com.google.firebase:firebase-ads:9.0.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
+
